[package]
name = "audiocloud_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
walkdir = "2.5.0"
audiocloud_lib = { version = "0.1.3", git = "https://github.com/AppearedOne/audiocloud_lib.git" }
actix-files = "0.6.5"
toml = "0.8.12"
